@@ -147,6 +147,7 @@ dist_svcweb_DATA = \
 	www/portal/rspecdelete.php \
 	www/portal/rspecdownload.php \
 	www/portal/rspecs.php \
+	www/portal/rspecupdate.php \
 	www/portal/rspecupload.php \
 	www/portal/rspecview.php \
 	www/portal/rspecuploadparser.php \
